RESOLVED FIXED92035
setting playbackRate on a MediaController doesn't change the playbackRate for slaved media
https://bugs.webkit.org/show_bug.cgi?id=92035
Summary setting playbackRate on a MediaController doesn't change the playbackRate for...
Jer Noble
Reported 2012-07-23 15:10:55 PDT
Changing the playbackRate property on a MediaController does not change the playbackRate for its slaved media.
Attachments
Patch (4.27 KB, patch)
2012-07-23 16:58 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2012-07-23 15:11:06 PDT
Jer Noble
Comment 2 2012-07-23 16:58:16 PDT
WebKit Review Bot
Comment 3 2012-07-24 19:31:48 PDT
Comment on attachment 153902 [details] Patch Clearing flags on attachment: 153902 Committed r123567: <http://trac.webkit.org/changeset/123567>
WebKit Review Bot
Comment 4 2012-07-24 19:31:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.