setting playbackRate on a MediaController doesn't change the playbackRate for slaved media https://bugs.webkit.org/show_bug.cgi?id=92035

Reviewed by Darin Adler.

Source/WebCore:

Allow updatePlaybackRate() to change the MediaPlayer rate when the media element has a
current media controller.

Test: media/media-controller-playbackrate.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updatePlaybackRate):

LayoutTests:

* media/media-controller-playbackrate-expected.txt: Added.
* media/media-controller-playbackrate.html: Added.


Canonical link: https://commits.webkit.org/110007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123567 268f45cc-cd09-0410-ab3c-d52691b4dbfc